--- a/client.html
+++ b/client.html
@@ -15,16 +15,45 @@
       const wsUrl = 'ws://192.168.1.26:8080'        // Update this to the network IP on which the server is running. DoryNode can tell you.
       const hrEl = document.getElementById("hr")
       const timeEl = document.getElementById("time")
-      const connection = new WebSocket(wsUrl)
-      connection.onopen = () => {
+      let connection
+
+      openConnection()
+
+      function openConnection() {
+        connection = new WebSocket(wsUrl)
+        connection.onopen = onConnectionOpen
+        connection.onmessage = onConnectionMessage
+        connection.onclose = onConnectionClose
+        connection.onerror = onConnectionError
+      }
+
+      function onConnectionOpen() {
         console.log('client.html: connection open')
       }
-      connection.onmessage = e => {
+
+      function onConnectionMessage(e) {
         //console.log(`client.html: received socket message: ${e.data}`)
         let reading = JSON.parse(e.data)
         hrEl.value = reading.hr
         timeEl.value = reading.time
       }
+
+      function onConnectionClose() {
+        console.error(`client.html: connection closed: check server is running at ${wsUrl}`)
+      }
+
+      function onConnectionError() {
+        console.error(`client.html: connection error: check server is running at ${wsUrl}`)
+      }
+
+      setInterval(() => {   // periodically try to reopen the connection if need be
+        if (connection.readyState === WebSocket.CLOSED) {
+          console.error(`client.html: connection is closed: check server is running at ${wsUrl}`)
+          console.log(`client.html: attempting to reopen connection`)
+          openConnection()
+        }
+      }, 1000)
+
     </script>
   </body>
 </html>
