comment explaining canvases

--- a/client.html
+++ b/client.html
@@ -17,6 +17,7 @@
     <label>Time: </label>
     <input type="text" id="time" size="12" readonly="readonly">
 
+    <!-- These canvases will provide a simple visualisation of the most recent accelerometer reading: -->
     <p>
       <canvas id="canvasXY" width="300" height="300" style="border: solid;"></canvas>
       <canvas id="canvasZ" width="20" height="300" style="border: solid;"></canvas>
