use single apostrophes

--- a/client.html
+++ b/client.html
@@ -13,8 +13,9 @@
 
     <script>
       const wsUrl = 'ws://192.168.1.26:8080'        // Update this to the network IP on which the server is running. DoryNode can tell you.
-      const hrEl = document.getElementById("hr")
-      const timeEl = document.getElementById("time")
+      const hrEl = document.getElementById('hr')
+      const timeEl = document.getElementById('time')
+
       let connection                                // our WebSocket object
 
       openConnection()
