--- a/client.html
+++ b/client.html
@@ -1,4 +1,4 @@
-<!-- Version: asdv (accelerometer, socket, DoryNode, view) -->
+<!-- Version: a_d_ (accelerometer, socket/fetch, DoryNode, view/save) -->
 
 <html>
   <head>
