--- a/client.html
+++ b/client.html
@@ -1,4 +1,4 @@
-<!-- Version: asdv (accelerometer, socket, DoryNode, view) -->
+<!-- Version: a_d_ (accelerometer, socket/fetch, DoryNode, view/save) -->
 
 <html>
   <head>
@@ -24,7 +24,7 @@
     </p>
 
     <script>
-      const wsUrl = 'ws://192.168.1.19:8080'        // Update this to the network IP on which the server is running. DoryNode can tell you.
+      const wsUrl = 'ws://192.168.1.26:8080'        // Update this to the network IP on which the server is running. DoryNode can tell you.
       const xEl = document.getElementById('x')
       const yEl = document.getElementById('y')
       const zEl = document.getElementById('z')
